@@ -1,3 +1,8 @@
+2009-03-25  Esteban Sanchez  <estebans@artica.es>
+
+	* include/auth/mysql.php: Fixed an error on get_user_id() which was
+	returning integer values.
+
 2009-03-24  Evi Vanoost  <vanooste@rcbi.rochester.edu>
 
 	* include/functions_db.php: Made get_server_info more accurate as far as
